--- a/s1_development_environment/exercise_files/1_Tensors_in_PyTorch.ipynb
+++ b/s1_development_environment/exercise_files/1_Tensors_in_PyTorch.ipynb
@@ -398,7 +398,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "mlops",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -412,9 +412,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
